# remap_plugin_robot

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugins.xml
config/: 00-robot.yml
include/remap_plugin_robot/: plugin_robot.hpp
src/remap_plugin_robot/: plugin_robot.cpp
